main element with basic content added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
     <header>
         <h1>This is the test CV Setup of Mads</h1>
     </header>
+    <main>
+        <article>
+            <h2>Profile</h2>
+        </article>
+        <article>
+            <h2>Experiences</h2>
+            <section>
+                <h3>Stryhns - Food production </h3>
+                <h3>Fleggaard - Supermarket employee</h3>
+            </section>
+        </article>
+        <article>
+            <h2>Skills</h2>
+            <section>
+                <h3>Soft Skills</h3>
+            </section>
+            <section>
+                <h3>Technical Skills</h3>
+            </section>
+        </article>
+        <article>
+            <h2>Contact</h2>
+        </article>
+    </main>
 </body>
 
 </html>
