--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-        <h1>This is the test CV Setup of Mads</h1>
+        <h1>This is the test CV Setup of Mads Kristian Hansen</h1>
+        <p>I am an aspiring programming student about to become a Front End Developer</p>
     </header>
     <main>
         <article>
