--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 <body>
     <header>
         <h1>This is the test CV Setup of Mads Kristian Hansen</h1>
-        <p>I am an aspiring programming student about to become a Front End Developer</p>
+        <p>I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
     </header>
     <main>
         <article>
             <h2>Profile</h2>
+            <p>I am a reposeful, disciplined ascetic, interested in optimal health and continuous self development.<br>
+                Daily learning, meditation and physical training belong to my routine.<br>
+                I am empathic and open minded with a variety of interests.
+                <br>
+                <strong>
+                    Always striving to further prosper it: My love for IT and passion for programming.
+                </strong>
+            </p>
         </article>
         <article>
             <h2>Experiences</h2>
