headings of previous experiences refactored

--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
         <article>
             <h2>Experiences</h2>
             <section>
-                <h3>Stryhns - Food production </h3>
-                <h3>Fleggaard - Supermarket employee</h3>
+                <header>
+                    <h3>Stryhns - Food production </h3>
+                    <p>May 2021 - March 2022, November 2018 – October 2019, Graasten (DK)</p>
+                </header>
+                <header>
+                    <h3>Fleggaard - Supermarket employee</h3>
+                    <p>February 2020 - May 2021, February 2017 – June 2018, Harrislee (DE)</p>
+                </header>
             </section>
         </article>
         <article>
