--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 I am empathic and open minded with a variety of interests.
                 <br>
                 <strong>
-                    Always striving to further prosper it: My love for IT and passion for programming.
+                    Always striving to further prosper it:<br>
+                    My love for IT and passion for programming.<br>
+                    Both for the benefit of my individual self and society at large.
                 </strong>
             </p>
         </article>
@@ -34,10 +36,18 @@
                     <h3>Stryhns - Food production </h3>
                     <p>May 2021 - March 2022, November 2018 – October 2019, Graasten (DK)</p>
                 </header>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, facilis commodi in quia repudiandae
+                    explicabo eveniet modi veritatis, numquam deleniti omnis ducimus aut similique unde ea sequi
+                    corrupti placeat molestias.</p>
+            </section>
+            <section>
                 <header>
                     <h3>Fleggaard - Supermarket employee</h3>
                     <p>February 2020 - May 2021, February 2017 – June 2018, Harrislee (DE)</p>
                 </header>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet facere dignissimos consequatur officia
+                    ratione illo? Aperiam numquam vero, officiis velit quaerat porro a facere impedit non ab error earum
+                    ex?</p>
             </section>
         </article>
         <article>
