--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 
 <body>
     <header>
+        <nav>
+            <a href="#Profile">Profile</a>
+            <a href="#Experiences">Experiences</a>
+            <a href="#Skills">Skills</a>
+            <a href="#Contact">Contact</a>
+        </nav>
         <h1>This is the test CV Setup of Mads Kristian Hansen</h1>
         <p>I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
     </header>
     <main>
-        <article>
+        <article id="Profile">
             <h2>Profile</h2>
             <p>I am a reposeful, disciplined ascetic, interested in optimal health and continuous self development.<br>
                 Daily learning, meditation and physical training belong to my routine.<br>
@@ -29,7 +35,7 @@
                 </strong>
             </p>
         </article>
-        <article>
+        <article id="Experiences">
             <h2>Experiences</h2>
             <section>
                 <header>
@@ -50,7 +56,7 @@
                     ex?</p>
             </section>
         </article>
-        <article>
+        <article id="Skills">
             <h2>Skills</h2>
             <section>
                 <h3>Soft Skills</h3>
@@ -59,7 +65,7 @@
                 <h3>Technical Skills</h3>
             </section>
         </article>
-        <article>
+        <article id="Contact">
             <h2>Contact</h2>
         </article>
     </main>
