soft and technical skills added

--- a/index.html
+++ b/index.html
@@ -60,9 +60,32 @@
             <h2>Skills</h2>
             <section>
                 <h3>Soft Skills</h3>
+                <ul>
+                    <li>Analytical and problem solving ability</li>
+                    <li>Empathic</li>
+                    <li>Creative</li>
+                    <li>Willingness to learn</li>
+                    <li>Discipline and determination</li>
+                </ul>
             </section>
             <section>
                 <h3>Technical Skills</h3>
+                <section>
+                    <h4>Main Stack</h4>
+                    <ul>
+                        <li>Javascript</li>
+                        <li>Typescript, Angular</li>
+                        <li>HTML, CSS</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Side Stack</h4>
+                    <ul>
+                        <li>Git</li>
+                        <li>Firebase Database</li>
+                        <li>Bootstrap, Material Design</li>
+                    </ul>
+                </section>
             </section>
         </article>
         <article id="Contact">
