Contact information added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
         </article>
         <article id="Contact">
             <h2>Contact</h2>
+            <address>
+                <ol type="I">
+                    <li><a href="mailto:mads_hansen@hotmail.de">mads_hansen@hotmail.de</a></li>
+                    <li><a href="https://github.com/MadsKristianHansen">GitHub</a></li>
+                </ol>
+            </address>
         </article>
     </main>
 </body>
