css stylesheet added and linked

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Mads">
     <meta name="description" content="This is a test CV Setup">
     <title>CV Setup</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
