main padding added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="main-header">
         <h1>This is the test CV Setup of Mads Kristian Hansen</h1>
         <p>I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
         <nav>
