small profile description change made

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <br>
                 <strong>
                     Always striving to further prosper it:<br>
-                    My love for IT and passion for programming.<br>
+                    My love for harnessing the potential of IT, efficiency and my passion for programming.<br>
                     Both for the benefit of my individual self and society at large.
                 </strong>
             </p>
