--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header class="main-header">
         <h1>This is the test CV Setup of Mads Kristian Hansen</h1>
-        <p>I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
+        <p class="profession">I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
         <nav>
             <a href="#Profile">Profile</a>
             <a href="#Experiences">Experiences</a>
