set experience headings as inline-block elements

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             <h2>Experiences</h2>
             <section>
                 <header>
-                    <h3>Stryhns - Food production </h3>
-                    <p>May 2021 - March 2022, November 2018 – October 2019, Graasten (DK)</p>
+                    <h3 class="experience-heading">Stryhns - Food production </h3>
+                    <p class="experience-subheading">May 2021 - March 2022, November 2018 – October 2019
+                    </p>
                 </header>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, facilis commodi in quia repudiandae
                     explicabo eveniet modi veritatis, numquam deleniti omnis ducimus aut similique unde ea sequi
@@ -58,8 +59,9 @@
             </section>
             <section>
                 <header>
-                    <h3>Fleggaard - Supermarket employee</h3>
-                    <p>February 2020 - May 2021, February 2017 – June 2018, Harrislee (DE)</p>
+                    <h3 class="experience-heading">Fleggaard - Supermarket employee</h3>
+                    <p class="experience-subheading">February 2020 - May 2021, February 2017 – June 2018
+                    </p>
                 </header>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet facere dignissimos consequatur officia
                     ratione illo? Aperiam numquam vero, officiis velit quaerat porro a facere impedit non ab error earum
