offset positions & Hire-me badge added

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <a class="nav-link" href="#Skills">Skills</a>
             <a class="nav-link" href="#Contact">Contact</a>
         </nav>
+        <aside class="hire-me">Hire Me</aside>
     </header>
     <main class="main">
         <article id="Profile">
-            <h2>Profile</h2>
+            <h2 class="article-heading">Profile</h2>
             <p>I am a reposeful, disciplined ascetic, interested in optimal health and continuous self development.<br>
                 Daily learning, meditation and physical training belong to my routine.<br>
                 I am empathic and open minded with a variety of interests.
@@ -46,7 +47,7 @@
             </p>
         </article>
         <article id="Experiences">
-            <h2>Experiences</h2>
+            <h2 class="article-heading">Experiences</h2>
             <section>
                 <header>
                     <h3 class="experience-heading">Stryhns - Food production </h3>
@@ -69,7 +70,7 @@
             </section>
         </article>
         <article id="Skills">
-            <h2>Skills</h2>
+            <h2 class="article-heading">Skills</h2>
             <section>
                 <h3>Soft Skills</h3>
                 <ul>
@@ -81,7 +82,7 @@
                 </ul>
             </section>
             <section>
-                <h3>Technical Skills</h3>
+                <h3 class="article-heading">Technical Skills</h3>
                 <section>
                     <h4>Main Stack</h4>
                     <ul>
@@ -101,7 +102,7 @@
             </section>
         </article>
         <article id="Contact">
-            <h2>Contact</h2>
+            <h2 class="article-heading">Contact</h2>
             <address>
                 <ol type="I">
                     <li><a class="address-link" href="mailto:mads_hansen@hotmail.de">mads_hansen@hotmail.de</a></li>
