--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
 <body>
     <header class="main-header">
-        <h1>This is the test CV Setup of Mads Kristian Hansen</h1>
-        <p class="profession">I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
+        <div class="heading-group">
+            <h1 class="main-heading">Mads Kristian Hansen</h1>
+            <p class="profession">I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
+        </div>
         <nav>
             <a class="nav-link" href="#Profile">Profile</a>
             <a class="nav-link" href="#Experiences">Experiences</a>
