--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="main-heading">Mads Kristian Hansen</h1>
             <p class="profession">I am an aspiring programming student about to work as a <i>Front End Developer</i></p>
         </div>
-        <nav>
+        <nav class="navigation">
             <a class="nav-link" href="#Profile">Profile</a>
             <a class="nav-link" href="#Experiences">Experiences</a>
             <a class="nav-link" href="#Skills">Skills</a>
