displayeed experience-header vertically by default

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <article id="Experiences">
             <h2 class="article-heading">Experiences</h2>
             <section>
-                <header>
+                <header class="experience-header">
                     <h3 class="experience-heading">Stryhns - Food production </h3>
                     <p class="experience-subheading">May 2021 - March 2022, November 2018 – October 2019
                     </p>
@@ -61,7 +61,7 @@
                     corrupti placeat molestias.</p>
             </section>
             <section>
-                <header>
+                <header class="experience-header">
                     <h3 class="experience-heading">Fleggaard - Supermarket employee</h3>
                     <p class="experience-subheading">February 2020 - May 2021, February 2017 – June 2018
                     </p>
