--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
             </address>
         </article>
     </main>
+    <footer class="footer">
+        <div class="footer-group">
+            <div class="fade"></div>
+            <p>Did you like my CV?</p>
+            <a class="footer-link" href="mailto:mads_hansen@hotmail.de">Contact me</a>
+        </div>
+    </footer>
 </body>
 
 </html>
