--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <aside class="hire-me">Hire Me</aside>
     </header>
     <main class="main">
-        <article id="Profile">
+        <article class="main-article" id="Profile">
             <h2 class="article-heading">Profile</h2>
-            <p>I am a reposeful, disciplined ascetic, interested in optimal health and continuous self development.<br>
+            <p class="main-article-content">I am a reposeful, disciplined ascetic, interested in optimal health and
+                continuous self development.<br>
                 Daily learning, meditation and physical training belong to my routine.<br>
                 I am empathic and open minded with a variety of interests.
                 <br>
@@ -48,64 +49,73 @@
                 </strong>
             </p>
         </article>
-        <article id="Experiences">
+        <article class="main-article" id="Experiences">
             <h2 class="article-heading">Experiences</h2>
-            <section>
-                <header class="experience-header">
-                    <h3 class="experience-heading">Stryhns - Food production </h3>
-                    <p class="experience-subheading">May 2021 - March 2022, November 2018 – October 2019
-                    </p>
-                </header>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, facilis commodi in quia repudiandae
-                    explicabo eveniet modi veritatis, numquam deleniti omnis ducimus aut similique unde ea sequi
-                    corrupti placeat molestias.</p>
-            </section>
-            <section>
-                <header class="experience-header">
-                    <h3 class="experience-heading">Fleggaard - Supermarket employee</h3>
-                    <p class="experience-subheading">February 2020 - May 2021, February 2017 – June 2018
-                    </p>
-                </header>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet facere dignissimos consequatur officia
-                    ratione illo? Aperiam numquam vero, officiis velit quaerat porro a facere impedit non ab error earum
-                    ex?</p>
-            </section>
+            <div class="main-article-content">
+                <section>
+                    <header class="experience-header">
+                        <h3 class="experience-heading">Stryhns - Food production </h3>
+                        <p class="experience-subheading">May 2021 - March 2022, November 2018 – October 2019
+                        </p>
+                    </header>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, facilis commodi in quia
+                        repudiandae
+                        explicabo eveniet modi veritatis, numquam deleniti omnis ducimus aut similique unde ea sequi
+                        corrupti placeat molestias.</p>
+                </section>
+                <section>
+                    <header class="experience-header">
+                        <h3 class="experience-heading">Fleggaard - Supermarket employee</h3>
+                        <p class="experience-subheading">February 2020 - May 2021, February 2017 – June 2018
+                        </p>
+                    </header>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet facere dignissimos consequatur
+                        officia
+                        ratione illo? Aperiam numquam vero, officiis velit quaerat porro a facere impedit non ab error
+                        earum
+                        ex?</p>
+                </section>
+            </div>
         </article>
-        <article id="Skills">
+        <article class="main-article" id="Skills">
             <h2 class="article-heading">Skills</h2>
-            <section>
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li>Analytical and problem solving ability</li>
-                    <li>Empathic</li>
-                    <li>Creative</li>
-                    <li>Willingness to learn</li>
-                    <li>Discipline and determination</li>
-                </ul>
-            </section>
-            <section>
-                <h3 class="article-heading">Technical Skills</h3>
+            <div class="main-article-content">
                 <section>
-                    <h4>Main Stack</h4>
+                    <h3>Soft Skills</h3>
                     <ul>
-                        <li>Javascript</li>
-                        <li>Typescript, Angular</li>
-                        <li>HTML, CSS</li>
+                        <li>Analytical and problem solving ability</li>
+                        <li>Empathic</li>
+                        <li>Creative</li>
+                        <li>Willingness to learn</li>
+                        <li>Discipline and determination</li>
                     </ul>
                 </section>
                 <section>
-                    <h4>Side Stack</h4>
-                    <ul>
-                        <li>Git</li>
-                        <li>Firebase Database</li>
-                        <li>Bootstrap, Material Design</li>
-                    </ul>
+                    <h3>Technical Skills</h3>
+                    <div class="stack-wrapper">
+                        <section>
+                            <h4>Main Stack</h4>
+                            <ul>
+                                <li>Javascript</li>
+                                <li>Typescript, Angular</li>
+                                <li>HTML, CSS</li>
+                            </ul>
+                        </section>
+                        <section>
+                            <h4>Side Stack</h4>
+                            <ul>
+                                <li>Git</li>
+                                <li>Firebase Database</li>
+                                <li>Bootstrap, Material Design</li>
+                            </ul>
+                        </section>
+                    </div>
                 </section>
-            </section>
+            </div>
         </article>
-        <article id="Contact">
+        <article class="main-article" id="Contact">
             <h2 class="article-heading">Contact</h2>
-            <address>
+            <address class="main-article-content">
                 <ol type="I">
                     <li><a class="address-link" href="mailto:mads_hansen@hotmail.de">mads_hansen@hotmail.de</a></li>
                     <li><a class="address-link" href="https://github.com/MadsKristianHansen">GitHub</a></li>
